add 装饰器 代理 工厂方法 模式

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,15 @@ project(BigTalkDesignPattern)
 set(CMAKE_CXX_STANDARD 11)
 
 
-add_executable(simplyfactory codes/ch01/Operation.cpp)
+add_executable(simplyfactory "codes/ch01 simple_factory/simple_factory.cpp")
+add_executable(simplyfactory2 "codes/ch01 simple_factory/Operation.cpp" "codes/ch01 simple_factory/Operation.h")
+add_executable(strategy "codes/ch02 strategy/strategy.cpp")
+add_executable(Cash "codes/ch02 strategy/Cash.cpp")
+add_executable(decorator "codes/ch06 decorator/decorator.cpp")
+add_executable(decorator2 "codes/ch06 decorator/decorator2.cpp")
+
+add_executable(proxy "codes/ch07_proxy/proxy.cpp")
+add_executable(pursuit "codes/ch07_proxy/Pursuit.cpp")
+add_executable(factory_method "codes/ch08_factory-method/factory-method.cpp")
+add_executable(Leifeng "codes/ch08_factory-method/Leifeng.cpp")
+add_executable(Resume "codes/ch09_prototype/Resume.cpp")
