--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,5 @@ add_executable(pursuit "codes/ch07_proxy/Pursuit.cpp")
 add_executable(factory_method "codes/ch08_factory-method/factory-method.cpp")
 add_executable(Leifeng "codes/ch08_factory-method/Leifeng.cpp")
 add_executable(Resume "codes/ch09_prototype/Resume.cpp")
+add_executable(template_method "codes/ch10_template_method/template_method.cpp")
+add_executable(testPaper "codes/ch10_template_method/TestPaper.cpp")
