finish: ch12-ch15

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,10 @@ add_executable(Leifeng "codes/ch08_factory-method/Leifeng.cpp")
 add_executable(Resume "codes/ch09_prototype/Resume.cpp")
 add_executable(template_method "codes/ch10_template_method/template_method.cpp")
 add_executable(testPaper "codes/ch10_template_method/TestPaper.cpp")
+add_executable(facade "codes/ch12_facade/facade.cpp")
+add_executable(fund "codes/ch12_facade/Fund.cpp")
+add_executable(builder "codes/ch13_builder/builder.cpp")
+add_executable(person "codes/ch13_builder/Person.cpp")
+add_executable(observer1 "codes/ch14_observer/observer1.cpp")
+add_executable(boss "codes/ch14_observer/boss.cpp")
+add_executable(abstract_factory "codes/ch15_abstract_factory/abstract_factory.cpp")
