--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(BigTalkDesignPattern)
 set(CMAKE_CXX_STANDARD 11)
 
 
-add_executable(simplyfactory "codes/ch01 simple_factory/simple_factory.cpp")
+add_executable(simply factory "codes/ch01 simple_factory/simple_factory.cpp")
 add_executable(simplyfactory2 "codes/ch01 simple_factory/Operation.cpp" "codes/ch01 simple_factory/Operation.h")
 add_executable(strategy "codes/ch02 strategy/strategy.cpp")
 add_executable(Cash "codes/ch02 strategy/Cash.cpp")
@@ -25,3 +25,7 @@ add_executable(person "codes/ch13_builder/Person.cpp")
 add_executable(observer1 "codes/ch14_observer/observer1.cpp")
 add_executable(boss "codes/ch14_observer/boss.cpp")
 add_executable(abstract_factory "codes/ch15_abstract_factory/abstract_factory.cpp")
+add_executable(workstate "codes/ch16_work_state/work_state.cpp")
+add_executable(adapter "codes/ch17_adapter/adapter.cpp")
+add_executable(memento "codes/ch18_memento/memonto.cpp")
+add_executable(responsibility codes/ch24_chain_of_responsibility/Raise.cpp codes/ch24_chain_of_responsibility/main.cpp)
